k8s/jellyfin/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(\`jellyfin.home.coredev.uk\`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-redirect
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(\`jellyfin.home.coredev.uk\`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: jellyfin
spec:
  redirectScheme:
    scheme: https
    permanent: true
